Fix loading bug on safari

--- a/src/templates/bespoke/bespoke.scss
+++ b/src/templates/bespoke/bespoke.scss
@@ -21,6 +21,10 @@ $progress-height: 5px;
     overflow: hidden;
   }
 
+  body.loading {
+    display: none;
+  }
+
   // Common visibility control for slides
   svg.bespoke-marp-slide {
     content-visibility: hidden;
